Archive2/93/8481227e497779/output
main.cpp: In function 'int main()':
main.cpp:12:37: error: '_addcarry_u64' was not declared in this scope
     flag = _addcarry_u64(flag,a,b,&a);
                                     ^
